k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app-deployment
  namespace: kiii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studentapp
  template:
    metadata:
      labels:
        app: studentapp
    spec:
      containers:
        - name: student-app-container
          image: atanasoska/kiiiproject:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
          ports:
            - containerPort: 8080
